--- a/biografia.html
+++ b/biografia.html
@@ -26,7 +26,7 @@
     <div class="text">
         <p>En la zona de La Cañada en Paterna, nace un moderno restaurante con un equipo de profesionales de la hosteleria
         valenciana llamado El mesón, al frente dirige el conocido chef Alvaro Saez, con muchos años de
-        experiencia en Hosteleria y conocido por sus arroces elaborados con magia y mucho arte culinario.</p>
+        experiencia en Hossteleria y conocido por sus arroces elaborados con magia y mucho arte culinario.</p>
         &nbsp;
         <p>Estudia bien la zona..., y apuesta por dar un servicio de calidad contando con una plantilla de profesionales
         que hacen que la magia aparezca en cuanto te sientas a degustar sus platos y el bienestar de sus instalaciones.
